# rust-book

./: .gitignore  Cargo.toml  README.md
chapter-10/generics/src/: main.rs
chapter-10/largest/src/: main.rs
chapter-10/traits/src/: lib.rs  main.rs
chapter-10/validating-references-with-lifetimes/: Cargo.toml
chapter-10/validating-references-with-lifetimes/src/: main.rs
chapter-11/adder/src/: lib.rs
chapter-11/test-modules/: Cargo.toml
chapter-11/test-modules/src/: lib.rs
chapter-11/test-modules/tests/: common.rs  integrration_tests.rs
chapter-12/minigrep/: Cargo.toml
chapter-12/minigrep/src/: lib.rs  main.rs  search.rs
chapter-12/minigrep/tests/: cli.rs  search.rs  tests.rs
chapter-13/closures/src/: main.rs
chapter-13/iterators/src/: main.rs
chapter-13/iterators/tests/: test.rs
chapter-14/crates/: Cargo.toml
chapter-14/crates/src/: lib.rs
chapter-2/guessing-game/src/: main.rs
chapter-3/branches/src/: main.rs
chapter-3/control-flow/src/: main.rs
chapter-3/data-types/src/: main.rs
chapter-3/functions/src/: main.rs
chapter-3/variables/src/: main.rs
chapter-5/structs/src/: main.rs
chapter-6/enums/src/: main.rs
chapter-6/if-let/src/: main.rs
chapter-6/match-learning/: Cargo.toml
chapter-6/match-learning/src/: main.rs
chapter-8/hash-maps/src/: main.rs
chapter-8/strings/src/: main.rs
chapter-8/vectors/src/: main.rs
chapter-9/errors/src/: main.rs
command-line-book/grrs/src/: main.rs
guessing_game/src/: main.rs
rust-by-example/hello-world/src/: main.rs
scripts/: cleanup.sh  format.sh
