[workspace]

resolver = "2"
members = [
	"chapter-1/hello-cargo",
	"chapter-2/guessing-game",
	"chapter-3/control-flow",
	"chapter-3/data-types",
	"chapter-3/functions",
	"chapter-3/variables",
	"chapter-5/structs",
	"chapter-6/enums",
	"chapter-6/if-let",
	"chapter-6/match-learning",
	"chapter-8/hash-maps",
	"chapter-8/strings", 
	"chapter-8/vectors",
	"chapter-9/errors",
	"chapter-10/largest",
	"chapter-10/generics",
	"chapter-10/traits"
]
